--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet" />
 
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
+
     <title>Super Mário Bros - O Filme</title>
 </head>
 
 <body>
 
-    <div>
+    <div class="video-fundo">
         <video class="video" autoplay loop muted>
             <source src="./src/video/video-mario.mp4">
         </video>
@@ -29,20 +33,26 @@
         </a>
         <nav>
             <ul class="menu">
-                <li>Home</li>
-                <li>Detalhes</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
     </header>
     <main class="container">
         <div class="infos">
             <img class="imagem-titulo" src="./src/imagens/titulo.png" alt="imagem do titulo do filme">
-            <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsam amet dolorem
-                consequatur culpa iste temporibus porro. Perferendis, assumenda! Eaque voluptates ex totam reiciendis
-                dolorem aut repellendus expedita temporibus minima!</p>
+            <p class="descricao">Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
             <button class="botao-trailer">Veja o trailer</button>
         </div>
         <img class="mario" src="./src/imagens/super-mario-chars.png" alt="mario chars" />
+
+        <div class="modal">
+            <div class="conteudo-modal">
+                <span class="fechar-modal">X</span>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </div>
+        </div>
     </main>
 </body>
 
